Coding standards revision.
Fixes most, but not all, of the coding standard violations. Also
untested for app functionality.